Codeviewer scrollbar fix (see description)
After making use of flex boxes with the panes, the expected behaviour of
the scrollbars for the codeviewer was changed. The horizontal scrollbar
was only accessible after scrolling all the way down vertically. Also,
scrollbars were not in the expected location of the codeviewer did not
have enough code to fill up the pane. This commit fixes these issues.

--- a/app/assets/stylesheets/grader.scss
+++ b/app/assets/stylesheets/grader.scss
@@ -217,6 +217,10 @@
 }
 
 .dp-highlighter {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
   .annotation_highlighted_text {
     background-color: #f99;
     color: $dark-grey;
@@ -228,7 +232,7 @@
   }
 
   ol {
-    overflow-y: hidden;
+    flex-grow: 1;
   }
 }
 
